Refactor task management and sidebar components; remove useTasks hook, implement useAppData for centralized state management, and enhance UI with new styles and project handling features.

--- a/public/tasks.json
+++ b/public/tasks.json
@@ -4,41 +4,47 @@
     "text": "Planificar reunión semanal",
     "completed": false,
     "priority": "Alta",
-    "dueDate": "2025-07-25"
+    "dueDate": "2025-07-25",
+    "projectId": 101
   },
   {
     "id": 2,
     "text": "Comprar víveres para la semana",
     "completed": false,
     "priority": "Media",
-    "dueDate": "2025-07-24"
+    "dueDate": "2025-07-24",
+    "projectId": null
   },
   {
     "id": 3,
     "text": "Enviar informe trimestral",
     "completed": true,
     "priority": "Alta",
-    "dueDate": "2025-07-20"
+    "dueDate": "2025-07-20",
+    "projectId": 101
   },
   {
     "id": 4,
     "text": "Llamar a María",
     "completed": false,
     "priority": "Baja",
-    "dueDate": ""
+    "dueDate": "",
+    "projectId": null
   },
   {
     "id": 5,
     "text": "Hacer ejercicio por la mañana",
     "completed": false,
     "priority": "Media",
-    "dueDate": ""
+    "dueDate": "",
+    "projectId": 102
   },
   {
     "id": 6,
     "text": "Leer un capítulo del libro de React",
     "completed": true,
     "priority": "Baja",
-    "dueDate": "2025-07-21"
+    "dueDate": "2025-07-21",
+    "projectId": 102
   }
 ]
